[package]
name = "apt-history"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.31"
clap = { version = "4.3.19", features = ["derive"] }
flate2 = "1.0.28"
regex = "1.10.2"
stybulate = "1.1.2"
tabular = "0.2.0"
